优化登录验证器流程